added per-file-ignores in flake8

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,6 @@ commands = flake8 .
 
 [flake8]
 exclude = .git, .tox, build, dist
+per-file-ignores =
+                 pystream/__init__.py: F401
+                 tests/test_pystream.py: F401
